--- a/.github/workflows/demo-feedback.yml
+++ b/.github/workflows/demo-feedback.yml
@@ -5,40 +5,20 @@ on:
     branches:
     - main
     paths:
-    - exercises/**
+    - project/**
 
 jobs:
-  exercise-feedback:
+  project-feedback/CI Implementation:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-      with:
-        path: main
+    
 
-    - name: Checkout exercise feedback
-      uses: actions/checkout@v3
-      with:
-        repository: jvalue/amse-exercise-feedback
-        path: grading
-
-    - name: Set up Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: 'lts/*'
-
-    # Install jayvee
-    - name: Set up Jayvee
+    
+    # Run Continuous Integration
+    - name: CI Test
       run: |
-        ./grading/ci/setup_jayvee.sh
+        ./project/tests.sh
 
-    # Install python
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
-
-    # Run exercise feedback
-    - name: Exercise feedback
-      run: |
-        ./grading/ci/run_grading.sh
+  
