--- a/.github/workflows/demo-feedback.yml
+++ b/.github/workflows/demo-feedback.yml
@@ -8,7 +8,7 @@ on:
     - project/**
 
 jobs:
-  project-feedback/CI Implementation:
+  CI_Implementation:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
