--- a/.github/workflows/demo-feedback.yml
+++ b/.github/workflows/demo-feedback.yml
@@ -21,6 +21,6 @@ jobs:
     # Run Continuous Integration
     - name: CI Test
       run: |
-        /project/tests.sh
+        ../project/tests.sh
 
   
