--- a/.github/workflows/demo-feedback.yml
+++ b/.github/workflows/demo-feedback.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
     - main
-    paths:
-    - 'data-engineering/**'
+  
 
 jobs:
   CI_Implementation:
@@ -15,6 +14,13 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: main
+        
+   # Install python
+   
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
     # Run Continuous Integration
     - name: CI Test
