--- a/.github/workflows/demo-feedback.yml
+++ b/.github/workflows/demo-feedback.yml
@@ -25,7 +25,7 @@ jobs:
   # Run Continuous Integration
     - name: CI Test
       run: |
-       chmod u+r+x ./main/project/test.sh
+       chmod u+r+x ./main/project/tests.sh
        cd ./main/project
        ./tests.sh
       
