--- a/.github/workflows/demo-feedback.yml
+++ b/.github/workflows/demo-feedback.yml
@@ -26,7 +26,7 @@ jobs:
     - name: CI Test
       run: |
        chmod u+r+x ./main/project/tests.sh
-       cd ./main/data
+       cd ./main/project
        ./tests.sh
       
 
